--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "morgan": "^1.10.0",
     "socket.io": "^4.7.4"
   }
 }
